--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,4 +1,3 @@
-
-.Ticket#9999 - Migração git
-
-fwqfq
+version https://git-lfs.github.com/spec/v1
+oid sha256:73be734bf0be922c9e400f2fc8d9f258551b0519e98950a5335bdd7b246fda25
+size 40
